--- a/styles/bio.css
+++ b/styles/bio.css
@@ -95,7 +95,6 @@
     width: 100vw;
     height: 8vh;
     display: flex;
-    justify-content: space-between;
     align-items: center;
   }
   .header__logo-name {
@@ -103,16 +102,19 @@
     width: 30vw;
     display: inline-block;
     text-align: left;
-    font-weight: 600;
-    font-size: 1.5rem;
+    font-weight: 700;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
   }
   .header__menu {
-    display: row;
-    text-align: left;
+    flex-direction: row;
     justify-content: space-between;
-    gap: 1.25rem;
     width: 30vw;
     padding-top: 3rem;
+    text-align: left;
+    font-weight: 600;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
   .header__menu-item .left {
     border-bottom: 0.25rem solid white;
