--- a/styles/bio.css
+++ b/styles/bio.css
@@ -16,12 +16,6 @@
   font-weight: 400;
   font-style: normal;
 }
-@font-face {
-  font-family: "Avenir";
-  src: url("../../assets/fonts/AvenirNextLTPro-Regular.otf") format("opentype");
-  font-weight: 400;
-  font-style: normal;
-}
 /************* primary colors ********************/
 /*************secondary colors *****************/
 /*
@@ -41,98 +35,191 @@
 .header {
   background: #323232;
   color: #ffffff;
-  font-weight: 700;
   height: 8vh;
+  width: 100vw;
+  display: flex;
+  flex-direction: column;
 }
 .header__logo-name {
-  padding: 35px;
-  width: 100vw;
-  display: block;
+  margin: 1rem 0 0 0;
+  padding: 0;
   text-align: center;
   font-weight: 600;
   font-size: 1.5rem;
+  line-height: 2rem;
+}
+.header__navigation {
+  color: #ffffff;
+  list-style-type: none;
+  text-align: center;
+  justify-content: center;
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 .header__menu {
-  list-style-type: none;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  text-align: center;
   font-weight: 600;
   font-size: 0.875rem;
   line-height: 1.375rem;
   margin: 0;
   padding: 0;
+  color: #ffffff;
+  display: flex;
+  justify-content: space-evenly;
 }
 .header__menu-item {
   margin: 0;
   font-weight: 600;
   font-size: 0.875rem;
   line-height: 1.375rem;
-}
-.header__menu-item-link {
+  text-align: center;
   text-decoration: none;
+  list-style-type: none;
+  display: inline-block;
+  width: 50%;
+}
+.header__menu-item--link {
+  text-decoration: none;
+  flex: 0.5;
   color: #ffffff;
 }
 
-.header__menu-item.left {
-  border-bottom: 0.25rem solid white;
-  flex: 0.5;
-  padding-bottom: 0.625rem;
-  text-decoration: none;
+.underline {
+  border-bottom: 0.1rem solid #ffffff;
+  padding-bottom: 0;
+  height: 2rem;
+  width: 50%;
 }
 
-.header__menu-item.right {
-  flex: 0.5;
+.header__menu a:hover {
+  border-bottom: 0.1rem solid #ffffff;
   text-decoration: none;
-  color: #E1E1E1;
+  text-align: center;
+  color: #ffffff;
+  transition: 0.3s ease;
   font-weight: 400;
 }
 
-@media only screen and (min-width: 768px) {
-  .header {
-    flex-direction: row;
-    width: 100vw;
-    height: 8vh;
-    display: flex;
-    align-items: center;
-  }
-  .header__logo-name {
-    padding: 35px;
-    width: 30vw;
-    display: inline-block;
-    text-align: left;
-    font-weight: 700;
-    font-size: 2.25rem;
-    line-height: 2.75rem;
-  }
-  .header__menu {
-    flex-direction: row;
-    justify-content: space-between;
-    width: 30vw;
-    padding-top: 3rem;
-    text-align: left;
-    font-weight: 600;
-    font-size: 1.5rem;
-    line-height: 2rem;
-  }
-  .header__menu-item .left {
-    border-bottom: 0.25rem solid white;
-    flex: 0.2;
-    text-decoration: none;
-  }
-  .header .header__menu-item.right {
-    flex: 0.5;
-    text-decoration: none;
-    color: #E1E1E1;
-    font-weight: 400;
-  }
-  .left {
-    border-bottom: 0.25rem solid white;
-    padding-bottom: 0;
-    text-decoration: none;
-  }
+.header__menu-item--link.active {
+  text-decoration: none;
+  text-align: center;
+  color: #ffffff;
+  transition: 0.3s ease;
 }
+
+.header__menu-item--link.inactive {
+  color: #E1E1E1;
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+}
+
+/*
+.active>a{
+
+    border-bottom: 0.25rem solid white;
+    text-decoration: none;
+    text-align: center;
+    color: $white;
+    transition: 0.3s ease;
+    &:hover {
+            padding: 0 0 6px 0;
+            border-color: white;
+        }
+
+}
+
+
+
+.effect-four>a {
+    padding: 0 0 4px 0;
+    border-bottom: 2px solid $mainColor;
+    transition: 0.3s ease;
+
+    &:hover {
+        padding: 0 0 6px 0;
+        border-color: white;
+    }
+}
+
+* /
+/*
+@include brkpoin.medium {
+
+    .header {
+        flex-direction: row;
+        width: 100vw;
+        height: 8vh;
+        display: flex;
+        align-items: center;
+        padding-top: 2rem;
+
+
+
+
+        &__logo-name {
+            padding-left: 35px;
+            width: 30vw;
+            display: inline-block;
+            text-align: left;
+            font-weight: 700;
+            font-size: 2.25rem;
+            line-height: 2.75rem;
+        }
+
+        &__menu {
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: center;
+            width: 30vw;
+
+        }
+
+        &__navigation--top {
+            height: 100%;
+            text-align: center;
+
+        }
+
+        &__navigation--bottom {
+            height: 100%;
+        }
+
+        &__menu-item {
+
+            text-decoration: none;
+            width: 100%;
+            text-align: center;
+            font-weight: 600;
+            font-size: 1.5rem;
+            line-height: 2rem;
+
+        }
+
+        &__menu-item.right {
+            flex: 0.5;
+            text-decoration: none;
+            color: color.$mercury;
+            font-weight: 400;
+            padding-bottom: 3.5rem;
+        }
+
+        &__menu-item.left {
+
+            border-bottom: 0.25rem solid white;
+            text-decoration: none;
+            width: fit-content;
+            padding: 0;
+            margin: 0;
+            padding-bottom: 3.5rem;
+        }
+    }
+}
+
+
+
+
+
 /******* Hero*************/
 .hero {
   width: 100vw;
@@ -149,7 +236,6 @@
   top: 0;
   left: 0;
   background: rgba(50, 50, 50, 0.5);
-  color: white;
   display: flex;
   align-items: flex-start;
   justify-content: center;
