--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -1,15 +1,15 @@
 @use "./partials/fonts";
-@use "./partials/footer";
 @use "./partials/main-content";
 @use "./partials/header";
 @use "./partials/mixins";
+@use "./partials/footer";
 
 html,
 body {
     margin: 0;
+    padding: 0;
     font-family: "Avenir";
-    line-height: 1.8rem;
-    height: 100vh;
+   font-weight: 100%;
     box-sizing: border-box;
 }
 
