--- a/styles/bio.css
+++ b/styles/bio.css
@@ -114,10 +114,17 @@
     margin-left: 30px;
   }
 }
+@media only screen and (min-width: 1440px) {
+  .main-gallery {
+    font-size: 1.8rem;
+    display: flex;
+    flex-direction: row;
+  }
+}
 
 .main-gallery__image {
   max-width: 100%;
-  width: 50rem;
+  width: 30rem;
   margin: 0 auto;
   padding: 10px;
   flex-direction: column;
@@ -126,14 +133,14 @@
 @media only screen and (min-width: 768px) {
   .main-gallery__image {
     font-size: 1.8rem;
-    display: flex;
+    width: 10rem;
   }
 }
 
 .header {
   background: #323232;
   color: #ffffff;
-  height: 8vh;
+  height: 12vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -150,6 +157,8 @@
   margin: 1rem 0 0 0;
   padding: 0 35px 0 35px;
   text-align: center;
+  width: 120px;
+  height: 20px;
   font-weight: 600;
   font-size: 1.5rem;
   line-height: 2rem;
@@ -331,72 +340,7 @@
             padding-bottom: 3.5rem;
         }
     }
-}
-
-
-
-
-
-/******* Hero*************/
-.hero {
-  width: 100vw;
-  height: 50vh;
-  position: relative;
-  background: url(../../assets/images/hero-bio.jpg);
-  background-size: cover;
-}
-
-.cover {
-  width: 100vw;
-  height: 50vh;
-  position: absolute;
-  top: 0;
-  left: 0;
-  background: rgba(50, 50, 50, 0.5);
-  display: flex;
-  align-items: flex-start;
-  justify-content: center;
-  flex-direction: column;
-  background-position: 50% 50%;
-  flex-wrap: nowrap;
-}
-
-.cover__title {
-  top: 33%;
-  right: 0;
-  padding-left: 1rem;
-  color: #ffffff;
-  padding-left: 1rem;
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
-
-.main__first--title {
-  padding-left: 1rem;
-  font-weight: 700;
-  font-size: 1.5rem;
-  line-height: 2rem;
-  text-align: left;
-}
-
-.main__first,
-.main__second {
-  margin: 2rem;
-}
-
-.main__first--img {
-  max-width: 100%;
-  height: auto;
-  margin: 2rem;
-  display: inline-block;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  background-position: 50% 50%;
-  text-align: center;
-}
-
+******/
 .footer {
   background: #323232;
   border: 1px solid #323232;
