--- a/styles/bio.css
+++ b/styles/bio.css
@@ -33,31 +33,31 @@
 /* media query for tablet landscape or medium pixel density devices */
 /* media query for high pixel density devices */
 /******* Hero*************/
-.hero {
+.main__hero {
   width: 100%;
-  position: relative;
-  height: 50%;
   margin: 0 auto;
+  position: relative;
   background: url(../../assets/images/hero-bio.jpg);
   background-size: cover;
+  height: 50vh;
 }
 
-.cover { /*check later*/
+.main__hero--cover { /*check later*/
   width: 100%;
-  position: absolute;
   margin: 0 auto;
   top: 0;
   left: 0;
   background: rgba(50, 50, 50, 0.5);
-  display: flex;
   align-items: flex-start;
   justify-content: center;
   flex-direction: column;
-  background-position: 50% 50%;
   flex-wrap: nowrap;
+  height: 50vh;
+  position: absolute;
+  padding: 0 20px 0 20px;
 }
 
-.cover__title {
+.main__hero--title {
   top: 33%;
   right: 0;
   padding-left: 1rem;
@@ -69,11 +69,17 @@
 }
 
 .main {
-  margin: 0 1.5rem 0 1.5rem;
-  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  display: flex;
+}
+
+.main__container--content {
+  font-weight: 600;
+  font-size: 0.875rem;
+  line-height: 1.375rem;
+  text-align: left;
 }
 
 .main__first--title {
@@ -83,39 +89,63 @@
   text-align: left;
 }
 
-.main__first,
-.main__second {
-  margin: 2rem;
-  padding: 0;
+@media only screen and (min-width: 768px) {
+  .main__first--title {
+    font-weight: 700;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+}
+.main__second--header {
+  font-weight: 700;
+  font-size: 1.5rem;
+  line-height: 2rem;
 }
 
-.main__first--img {
-  max-width: 100%;
-  margin: 0 auto;
+@media only screen and (min-width: 768px) {
+  .main__second--header {
+    font-weight: 700;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
+  }
+}
+.main__first,
+.main__second {
+  font-weight: 400;
+  font-size: 0.8125rem;
+  line-height: 1.125rem;
+  margin: 0 1.5rem 0 1.5rem;
 }
 
 @media only screen and (min-width: 768px) {
   .main__second--content {
     -moz-column-count: 2;
          column-count: 2;
+    font-weight: 400;
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 }
-.main-gallery {
+.main__first--img {
+  max-width: 100%;
+  margin: 0 auto;
+}
+
+.main__gallery {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
   margin: 0 auto;
 }
 @media only screen and (min-width: 768px) {
-  .main-gallery {
+  .main__gallery {
     font-size: 1.8rem;
-    display: flex;
-    flex-direction: row;
     margin-left: 30px;
   }
 }
 @media only screen and (min-width: 1440px) {
-  .main-gallery {
+  .main__gallery {
     font-size: 1.8rem;
     display: flex;
     flex-direction: row;
@@ -124,23 +154,28 @@
 
 .main-gallery__image {
   max-width: 100%;
-  width: 30rem;
+  width: 40rem;
   margin: 0 auto;
   padding: 10px;
-  flex-direction: column;
   text-align: center;
 }
+
 @media only screen and (min-width: 768px) {
-  .main-gallery__image {
-    font-size: 1.8rem;
-    width: 10rem;
+  .main__gallery {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin: 0 auto;
+  }
+  .row {
+    width: 30%;
   }
 }
-
 .header {
   background: #323232;
   color: #ffffff;
-  height: 12vh;
+  height: 10vh;
   width: 100vw;
   display: flex;
   flex-direction: column;
@@ -157,8 +192,6 @@
   margin: 1rem 0 0 0;
   padding: 0 35px 0 35px;
   text-align: center;
-  width: 120px;
-  height: 20px;
   font-weight: 600;
   font-size: 1.5rem;
   line-height: 2rem;
@@ -224,6 +257,7 @@
 .header__menu-item--link.active {
   border-bottom: 0.1rem solid #ffffff;
   padding-bottom: 14px;
+  width: 4rem;
   text-decoration: none;
   text-align: center;
   color: #ffffff;
@@ -231,6 +265,7 @@
   font-weight: 600;
   font-size: 0.875rem;
   line-height: 1.375rem;
+  padding-bottom: 1.5rem;
 }
 
 .header__menu-item--link.inactive {
@@ -352,7 +387,6 @@
   display: flex;
   padding: 2rem;
   font-weight: 400;
-  font-weight: 400;
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
@@ -360,6 +394,20 @@
   padding-top: 10px;
 }
 
+@media only screen and (min-width: 768px) {
+  .footer {
+    border: 1px solid #323232;
+    font-weight: 900;
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    display: flex;
+    padding: 2rem;
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+}
 .social__icon--item {
   margin: 0.3125rem;
 }
