--- a/styles/bio.css
+++ b/styles/bio.css
@@ -16,6 +16,24 @@
   font-weight: 400;
   font-style: normal;
 }
+@font-face {
+  font-family: "Avenir";
+  src: url("../../assets/fonts/Alternative files/AvenirNextLTPro-Bold") format("truetype");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Avenir";
+  src: url("../../assets/fonts/Alternative files/AvenirNextLTPro-Demi") format("truetype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Avenir";
+  src: url("../../assets/fonts/Alternative files/AvenirNextLTPro-Regular") format("truetype");
+  font-weight: 400;
+  font-style: normal;
+}
 /************* primary colors ********************/
 /*************secondary colors *****************/
 /*
@@ -232,6 +250,12 @@
     width: 30%;
   }
 }
+.main__form--img {
+  border-radius: 50%;
+  width: 50px;
+  height: 50%;
+}
+
 .header {
   background: #323232;
   color: #ffffff;
