--- a/styles/bio.css
+++ b/styles/bio.css
@@ -254,17 +254,63 @@
     width: 30%;
   }
 }
-.main__form {
-  display: flex;
+.comments {
+  border-bottom: 1.5px solid #E1E1E1;
+  padding: 10px;
 }
 
-.main__form--img {
+.main__form {
+  width: 100%;
+  text-align: center;
+}
+.main__form--header {
+  font-weight: 700;
+  display: inline-block;
+  width: 100%;
+  padding: 1rem;
+  font-size: 2rem;
+  text-align: left;
+  color: #323232;
+}
+
+.form {
+  width: 80%;
+  justify-content: center;
+  align-items: center;
+  font-family: "Avenir";
+}
+.form__img {
   width: 50px;
   height: 50px;
   border: 1px solid white;
   margin-left: 5px;
   position: relative;
   border-radius: 50%;
+}
+.form__name {
+  width: 80%;
+}
+
+textarea {
+  width: 80%;
+  text-align: center;
+  background: #E1E1E1;
+  border: 1px solid #AFAFAF;
+  font-family: "Avenir";
+  border-radius: 0.3125rem;
+  text-align: left;
+  padding-left: 0;
+  margin-left: 0;
+}
+
+.comments__img {
+  width: 50px;
+  height: 50px;
+  border: 1px solid white;
+  margin-left: 5px;
+  position: relative;
+  border-radius: 50%;
+  background: grey;
 }
 
 .header {
