--- a/styles/bio.css
+++ b/styles/bio.css
@@ -117,6 +117,30 @@
   }
 }
 
+.form {
+  margin: 0 auto;
+  display: flex;
+}
+.form__left {
+  width: 30%;
+  display: inline-block;
+}
+.form__right {
+  display: inline-block;
+  width: 70%;
+}
+.form__img {
+  width: 50px;
+  height: 50px;
+  border: 1px solid white;
+  margin-left: 5px;
+  position: relative;
+  border-radius: 50%;
+}
+.form__name {
+  width: 80%;
+}
+
 .center {
   text-align: center;
 }
@@ -313,24 +337,6 @@
   font-size: 2rem;
   text-align: left;
   color: #323232;
-}
-
-.form {
-  width: 80%;
-  justify-content: center;
-  align-items: center;
-  font-family: "Avenir";
-}
-.form__img {
-  width: 50px;
-  height: 50px;
-  border: 1px solid white;
-  margin-left: 5px;
-  position: relative;
-  border-radius: 50%;
-}
-.form__name {
-  width: 80%;
 }
 
 textarea {
